src/test/ui/consts/issue-73976.stderr
error: could not evaluate constant pattern
  --> $DIR/issue-73976.rs:19:37
   |
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/issue-73976.rs:19:37
   |
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

